setting up page

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is my personal low carb meal planner, a little side project"
+    />
+    <link
+      rel="shortcut icon"
+      href="./src/assets/favicon.svg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./src/index.css" />
-    <script type="module" src="./src/js/index.js"></script>
-    <title>Document</title>
+    <script type="module" src="./src/js/index.mjs"></script>
+    <title>Home | My Low Carb</title>
   </head>
   <body>
-    <h1 class="text-3xl">Test</h1>
-    <h2 class="bg-red-500">This is also a test</h2>
+    <header class="py-5 mx-auto">
+      <h1 class="text-3xl">Low carb meal planner</h1>
+    </header>
   </body>
 </html>
