--- a/index.html
+++ b/index.html
@@ -9,5 +9,68 @@
     <script type="module" src="./src/js/index.mjs"></script>
     <title>Home | My Low Carb</title>
   </head>
-  <body class="bg-sky-200 h-screen flex flex-col"></body>
+  <body class="bg-slate-300 h-screen text-indigo-950 flex flex-col">
+    <header class="uppercase text-4xl font-bold text-center p-5">
+      <h1>My food planner</h1>
+    </header>
+    <main class="grow">
+      <section class="w-5/6 mx-auto mt-5 bg-amber-100 p-5 rounded-2xl">
+        <h2 class="text-2xl capitalize text-center font-semibold py-5">Choose meals:</h2>
+        <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+            <h2>Day 1</h2>
+            <span data-plan="breakfast"></span>
+            <span data-plan="lunch"></span>
+            <span data-plan="dinner"></span>
+          </section>
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+            <h2>Day 2</h2>
+            <span data-plan="breakfast"></span>
+            <span data-plan="lunch"></span>
+            <span data-plan="dinner"></span>
+          </section>
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+            <h2>Day 3</h2>
+            <span data-plan="breakfast"></span>
+            <span data-plan="lunch"></span>
+            <span data-plan="dinner"></span>
+          </section>
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+            <h2>Day 4</h2>
+            <span data-plan="breakfast"></span>
+            <span data-plan="lunch"></span>
+            <span data-plan="dinner"></span>
+          </section>
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+            <h2>Day 5</h2>
+            <span data-plan="breakfast"></span>
+            <span data-plan="lunch"></span>
+            <span data-plan="dinner"></span>
+          </section>
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+            <h2>Day 6</h2>
+            <span data-plan="breakfast"></span>
+            <span data-plan="lunch"></span>
+            <span data-plan="dinner"></span>
+          </section>
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+            <h2>Day 7</h2>
+            <span data-plan="breakfast"></span>
+            <span data-plan="lunch"></span>
+            <span data-plan="dinner"></span>
+          </section>
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+            <h2>Day 8</h2>
+            <span data-plan="breakfast"></span>
+            <span data-plan="lunch"></span>
+            <span data-plan="dinner"></span>
+          </section>
+        </div>
+        <div class="p-5 mt-5 mb-10 flex justify-center">
+          <button class="uppercase bg-indigo-950 text-white py-3 px-6 rounded-full hover:bg-indigo-900">Shopping list</button>
+        </div>
+      </section>
+    </main>
+    <footer class="flex justify-center italic">&copy; <span class="px-1">2024</span><a href="https://www.linkedin.com/in/jon-henrik-aavitsland-abaa872b7/" target="_blank">Jon Henrik Åvitsland</a></footer>
+  </body>
 </html>
