--- a/index.html
+++ b/index.html
@@ -17,53 +17,29 @@
       <section class="w-5/6 mx-auto mt-5 bg-amber-100 p-5 rounded-2xl">
         <h2 class="text-2xl capitalize text-center font-semibold py-5">Choose meals:</h2>
         <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6">
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
             <h2>Day 1</h2>
-            <span data-plan="breakfast"></span>
-            <span data-plan="lunch"></span>
-            <span data-plan="dinner"></span>
           </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
             <h2>Day 2</h2>
-            <span data-plan="breakfast"></span>
-            <span data-plan="lunch"></span>
-            <span data-plan="dinner"></span>
           </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
             <h2>Day 3</h2>
-            <span data-plan="breakfast"></span>
-            <span data-plan="lunch"></span>
-            <span data-plan="dinner"></span>
           </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
             <h2>Day 4</h2>
-            <span data-plan="breakfast"></span>
-            <span data-plan="lunch"></span>
-            <span data-plan="dinner"></span>
           </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
             <h2>Day 5</h2>
-            <span data-plan="breakfast"></span>
-            <span data-plan="lunch"></span>
-            <span data-plan="dinner"></span>
           </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
             <h2>Day 6</h2>
-            <span data-plan="breakfast"></span>
-            <span data-plan="lunch"></span>
-            <span data-plan="dinner"></span>
           </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
             <h2>Day 7</h2>
-            <span data-plan="breakfast"></span>
-            <span data-plan="lunch"></span>
-            <span data-plan="dinner"></span>
           </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg">
+          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
             <h2>Day 8</h2>
-            <span data-plan="breakfast"></span>
-            <span data-plan="lunch"></span>
-            <span data-plan="dinner"></span>
           </section>
         </div>
         <div class="p-5 mt-5 mb-10 flex justify-center">
