--- a/index.html
+++ b/index.html
@@ -13,38 +13,24 @@
     <header class="uppercase text-4xl font-bold text-center p-5">
       <h1>My food planner</h1>
     </header>
-    <main class="grow">
-      <section class="w-5/6 mx-auto mt-5 bg-amber-100 p-5 rounded-2xl">
-        <h2 class="text-2xl capitalize text-center font-semibold py-5">Choose meals:</h2>
-        <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6">
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
-            <h2>Day 1</h2>
-          </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
-            <h2>Day 2</h2>
-          </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
-            <h2>Day 3</h2>
-          </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
-            <h2>Day 4</h2>
-          </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
-            <h2>Day 5</h2>
-          </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
-            <h2>Day 6</h2>
-          </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
-            <h2>Day 7</h2>
-          </section>
-          <section class="text-center min-h-36 p-3 bg-slate-300 flex flex-col justify-center rounded-lg cursor-pointer">
-            <h2>Day 8</h2>
-          </section>
+    <main class="grow w-screen">
+      <form class="p-10 md:max-w-lg mx-auto">
+        <div class="flex flex-col">
+          <label for="term">Number of days:</label>
+          <select name="term" id="term">
+            <option value="1">1</option>
+            <option value="7">7</option>
+            <option value="28">28</option>
+          </select>
         </div>
-        <div class="p-5 mt-5 mb-10 flex justify-center">
-          <button class="uppercase bg-indigo-950 text-white py-3 px-6 rounded-full hover:bg-indigo-900">Shopping list</button>
+        <div data-planner="days"></div>
+        <div class="flex justify-center p-10">
+          <button class="bg-amber-500 text-white px-6 py-3 rounded-xl hover:bg-amber-600 uppercase font-bold">Make Plan</button>
         </div>
+      </form>
+      <section>
+        <h2 class="text-center uppercase text-2xl font-bold pb-10">Your plan:</h2>
+        <div data-planner="your-plan"></div>
       </section>
     </main>
     <footer class="flex justify-center italic">&copy; <span class="px-1">2024</span><a href="https://www.linkedin.com/in/jon-henrik-aavitsland-abaa872b7/" target="_blank">Jon Henrik Åvitsland</a></footer>
