--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     </header>
     <main class="grow w-screen">
       <form class="p-10 md:max-w-lg mx-auto">
-        <div class="flex flex-col">
-          <label for="term">Number of days:</label>
-          <select name="term" id="term">
-            <option value="1">1</option>
-            <option value="7">7</option>
-            <option value="28">28</option>
-          </select>
+        <div class="flex flex-col py-2">
+          <label for="breakfast" class="capitalize">Choose a breakfast:</label>
+          <select name="breakfast" id="breakfast"></select>
         </div>
-        <div data-planner="days"></div>
+        <div class="flex flex-col py-2">
+          <label for="lunch" class="capitalize">Choose a lunch:</label>
+          <select name="lunch" id="lunch"></select>
+        </div>
+        <div class="flex flex-col py-2">
+          <label for="dinner" class="capitalize">Choose a dinner:</label>
+          <select name="dinner" id="dinner"></select>
+        </div>
         <div class="flex justify-center p-10">
           <button class="bg-amber-500 text-white px-6 py-3 rounded-xl hover:bg-amber-600 uppercase font-bold">Make Plan</button>
         </div>
